--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@_sh/strapi-plugin-ckeditor": "^6.0.1",
     "@strapi/plugin-cloud": "5.13.0",
     "@strapi/plugin-users-permissions": "5.13.0",
+    "@strapi/provider-upload-cloudinary": "^5.13.0",
     "@strapi/strapi": "5.13.0",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
